--- a/app/assets/stylesheets/landing.css
+++ b/app/assets/stylesheets/landing.css
@@ -1,9 +1,10 @@
 
+
 h1 {
     font-size: 180px;
     font-family: 'Merienda', cursive;
-    margin-bottom: 10px;
-    color: rgba(0, 0, 0, .8);
+    margin-left: 370px;
+    color: white;
     text-align: left;
 }
 
@@ -17,27 +18,48 @@ h1 {
 
 h3 {
     font-family: 'Pacifico', cursive;
-    font-size: 30px;
-    margin-left: 300px;
-    color: rgba(0, 0, 0, .5);
+    font-size: 40px;
+    margin-left: 430px;
+    margin-top: -140px; 
+    color: rgba(0, 0, 0, .8);
     text-align: left;
 
 }
 
-nav {
+/* nav {
     text-align: right;
-    background-color: rgb(225, 224, 223);
+    background-color: rgba(24, 24, 24, .5);
     height: 30px;
-    margin-top: -15px;
     margin-right: 0 auto;
     height: 40px;
-    padding: 10px;
-}
+} */
 
-.log_in_panel {
+/* .log_in_panel {
     display: flex;
     flex-direction: row;
     padding-top: 10px;
-    text-align: right;
-    
+    justify-content: flex-end;
+    height: 40px;
+} */
+/* 
+.nav_text, .field, .actions, .sign_up_text {
+    text-decoration: none !important;
+    font-size: 15px;
+    margin: 0 auto;
+    font-family: 'Righteous', cursive;
+    color: white;
 }
+
+.sign_up_panel {
+    height: 40px;
+    padding-top: -10px;
+    margin: 0 10px;
+}
+
+#sign-up-button a {
+    text-decoration: none;
+    color: white;
+    border: 1px white solid;
+    padding: 4.4px;
+} */
+
