--- a/app/assets/stylesheets/reflections.css
+++ b/app/assets/stylesheets/reflections.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     height: 840px;
+
 }
 
 .left_panel, .right_panel {
@@ -9,6 +10,7 @@
     flex-direction: column;
     width: 25%;
     height: 840px;
+    margin-top: 30px;
 }
 
 
@@ -20,7 +22,7 @@
 }
 
 .middle_top_panel {
-    height: 200px;
+    height: 150px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -35,10 +37,12 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-top: 40px;
+    margin-bottom: 30px;
 }
 
 .goals_achieved_panel, .rewards_achieved_panel {
-    background-color: #EEECE8;
+    background-color: rgba(24, 24, 24, .1);
     height: 200px;
     width: 350px;
     text-align: center;
@@ -48,17 +52,18 @@
     border-right: 2px dashed gray;
 }
 .self_care_panel, .giving_back_panel, .entertainment_panel {
-    background-color: #EEECE8;
+    background-color: rgba(24, 24, 24, .1);
     margin: 15px;
-    height: 300px;
+    height: 220px;
     width: 300px;
+    text-align: center;
 }
 
 .check_box_panel {
     display: flex;
     flex-direction: column;
-    height: 300px;
-    background-color: #EEECE8;
+    height: 220px;
+    background-color: rgba(24, 24, 24, .1);
     margin-left: -15px;
     margin-top: 15px;
     width: 25px;
@@ -68,22 +73,18 @@ h1 {
     font-size: 10px;
 }
 
-/* .top_10_panel, .learnings_panel, .new_things_panel, .people_inspiration_panel, .improvements_panel, .progression_panel, .obstacles_panel, .wrongs_panel {
-    height: 150px;
-    border: 2px dashed black;
-    margin-top: -9px;
-    margin-bottom: 10px;
-    margin-left: 50px;
-    background-color: #EEECE8;
-    width: 300px;
-} */
+.month_text {
+    font-size: 120px;
+    font-family: 'Libre Baskerville', serif;
+    margin-left: 150px;
+}
 
 .category_panel {
-    height: 30px;
+    height: 40px;
     margin: 10px;
-    margin-left: 50px;
+    margin-left: 30px;
     width: 300px;
-    background-color: #EEECE8;
+    background-color: rgba(24, 24, 24, .1);
 }
 
 .checklist_text_panel {
@@ -91,26 +92,46 @@ h1 {
 }
 
 .reflections_cat-text {
-    text-align: center;
-    font-size: 10px;
+    text-align: left;
+    font-size: 20px;
+    margin-left: 10px;
 }
 
-.month_text {
-    font-family: 'Libre Baskerville', serif;
-    font-size: 60px;
+.reflection_text-panel {
+    margin-top: 20px;
 }
 
 .reflections_text {
-    font-size: 40px;
+    font-size: 50px;
     font-family: 'Dancing Script', cursive;
+    margin-left: 10px;
 }
 
 .reflection-input {
-    height: 150px;
-    border: 2px dashed black;
+    height: 120px;
+    border: 2px;
     margin-top: -9px;
     margin-bottom: 10px;
-    margin-left: 50px;
-    background-color: #EEECE8;
+    margin-left: 25px;
+    background-color: rgba(24, 24, 24, .1);
     width: 300px;
+}
+
+.save_button_panel {
+    margin-top: 15px;
+    text-align: center;
+}
+
+.save_reflection-button {
+    background-color: #6790A4;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.arrow_panel {
 }
