--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,7 +19,7 @@
  }
 
  body {
-    background: url('background.jpg') center no-repeat;
+    background: image_url('background.jpg') center no-repeat;
     background-size: cover;
     height: 880px;
     margin: 0;
