--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,5 @@
 <%= stylesheet_link_tag 'landing.css' %>
 
-<h1> Planned.</h1>
+<h1 class="landing-title-text"> Planned.</h1>
 <h3> A goal without a plan is just a dream. </h3>
 
