--- a/app/assets/stylesheets/reflections.css
+++ b/app/assets/stylesheets/reflections.css
@@ -1,7 +1,7 @@
 .flex-container {
     display: flex;
     flex-direction: row;
-    height: 840px;
+    height: 870px;
 
 }
 
@@ -13,12 +13,17 @@
     margin-top: 30px;
 }
 
+.right_panel {
+    margin-top: -10px;
+}
+
 
 .middle_panel {
     display: flex;
     flex-direction: column;
     width: 50%;
     height: 840px;
+    margin-left: 50px;
 }
 
 .middle_top_panel {
@@ -26,6 +31,10 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+}
+
+.month_text_panel {
+    padding-top: 25px;
 }
 
 .middle_middle_panel {
@@ -37,8 +46,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 40px;
-    margin-bottom: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .goals_achieved_panel, .rewards_achieved_panel {
@@ -74,9 +83,10 @@ h1 {
 }
 
 .month_text {
-    font-size: 120px;
+    font-size: 140px;
     font-family: 'Libre Baskerville', serif;
     margin-left: 150px;
+    color: white;
 }
 
 .category_panel {
@@ -84,7 +94,6 @@ h1 {
     margin: 10px;
     margin-left: 30px;
     width: 300px;
-    background-color: rgba(24, 24, 24, .1);
 }
 
 .checklist_text_panel {
@@ -92,9 +101,18 @@ h1 {
 }
 
 .reflections_cat-text {
-    text-align: left;
-    font-size: 20px;
+    font-size: 15px;
     margin-left: 10px;
+    text-align: center;
+    color: white;
+}
+
+.reflections_cat-text-people {
+    font-size: 10px;
+    margin-left: 10px;
+    text-align: center;
+    margin-bottom: 5px;
+    color: white;
 }
 
 .reflection_text-panel {
@@ -105,12 +123,13 @@ h1 {
     font-size: 50px;
     font-family: 'Dancing Script', cursive;
     margin-left: 10px;
+    color: white;
 }
 
 .reflection-input {
     height: 120px;
     border: 2px;
-    margin-top: -9px;
+    margin-top: -10px;
     margin-bottom: 10px;
     margin-left: 25px;
     background-color: rgba(24, 24, 24, .1);
@@ -118,7 +137,7 @@ h1 {
 }
 
 .save_button_panel {
-    margin-top: 15px;
+    margin-top: 2px;
     text-align: center;
 }
 
@@ -126,12 +145,9 @@ h1 {
     background-color: #6790A4;
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 5px 28px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
-}
-
-.arrow_panel {
+    font-size: 12px;
 }
