--- a/app/views/reflections/edit.html.erb
+++ b/app/views/reflections/edit.html.erb
@@ -8,7 +8,7 @@
 
         <div class='top_10_panel'>
             <div class='category_panel'>
-                <h1 class='reflections_cat-text'> My top 10 achievements this month</h1>
+                <h1 class='reflections_cat-text'> Top 10 achievements this month</h1>
             </div>
             <%= text_area :reflection, :top10, class:'reflection-input' %>
         </div>
@@ -31,7 +31,7 @@
 
 
         <div class='category_panel'>
-            <h1 class='reflections_cat-text'> People who I learned from and inspired me: </h1>
+            <h1 class='reflections_cat-text-people'> People who I learned from and inspired me: </h1>
         </div>
         <div class='people_inspiration_panel'>
             <%= text_area :reflection, :people, class:'reflection-input' %>
@@ -42,7 +42,7 @@
     <div class='middle_panel'>
 
         <div class='middle_top_panel'>
-            <div>
+            <div class='month_text_panel'>
                 <h1 class='month_text'> <%= @start_date.strftime("%B")%> </h1>
             </div>
 
