--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,30 +1,35 @@
-<h1>Sign Up</h1>
-<%= form_for @user do |f| %>
-  <% if @user.errors.any? %>
-    <div class="error_messages">
-      <h2>Form is invalid</h2>
-      <ul>
-        <% for message in @user.errors.full_messages %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
+<div class="edit-container">
+  <h1 class="edit-entry-header">Sign Up</h1>
+  <%= form_for @user do |f| %>
+    <% if @user.errors.any? %>
+      <div class="error_messages">
+        <h2>Form is invalid</h2>
+        <ul>
+          <% for message in @user.errors.full_messages %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+    
+    <div class="create-user-panel">
+      <div class="new-user-field">
+        <%= f.label :name, class: "labels" %>
+        <%= f.text_field :name %>
+      </div>
+      <div class="new-user-field">
+        <%= f.label :email, class: "labels" %>
+        <%= f.text_field :email %>
+      </div>
+      <div class="new-user-field">
+        <%= f.label :password, class: "password-label" %>
+        <%= f.password_field :password %>
+      </div>
+      <div class="new-user-field">
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation %>
+      </div>
+      <div class="new-user-field"><%= f.submit %></div>
+    <% end %>
   </div>
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
-  </div>
-  <div class="actions"><%= f.submit %></div>
-<% end %>
+</div>
